@@ -547,7 +547,7 @@ static void cg_upnp_device_newsubscriptionrecieved(CgUpnpService *service, CgUpn
 	cg_upnp_event_subscription_request_postresponse(subReq, subRes);
 	cg_upnp_event_subscription_response_delete(subRes);
 
-	cg_upnp_service_notifyallstatevariables(service);
+	cg_upnp_service_notifyall(service, FALSE);
 
 	cg_log_debug_l4("Leaving...\n");
 }
